[tool.poetry]
name = "rekruto"
version = "0.1.0"
description = ""
authors = ["Kosorukov Roman"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.0"
pydantic = "^1.9.0"
uvicorn = "^0.17.5"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
